--- a/Promise/boxMove/boxMove.html
+++ b/Promise/boxMove/boxMove.html
@@ -65,7 +65,7 @@
 
                 state = false;
                 posValue.top = 500;
-                dom.box.style.top = posValue.top + "px";
+                // dom.box.style.top = posValue.top + "px";
                 let moveleft = setInterval(() => {
                   posValue.left++;
                   dom.box.style.left = posValue.left + "px";
